fix: position history btn and overflow history block

--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ sup {
 .history_btn {
     position: absolute;
     top: 3px;
-    right: 15px;
+    left: 15px;
     /*width: 60px;*/
     /*height: 10px;*/
     padding: 5px 10px;
@@ -108,6 +108,7 @@ sup {
 .history_block {
     width: 100%;
     height: 100%;
+    overflow: auto auto;
     border-radius: 5px;
     position: absolute;
     z-index: 3;
